update to use the API of Java 21