@@ -1,7 +1,7 @@
 package fr.umlv.loom.structured;
 
-import jdk.incubator.concurrent.StructuredTaskScope;
-
+import java.util.Objects;
+import java.util.concurrent.StructuredTaskScope;
 import java.util.function.Function;
 import java.util.function.Supplier;
 
@@ -13,7 +13,7 @@ public class StructuredScopeShutdownOnFailure<E extends Exception> implements Au
   }
 
   public interface TaskHandle<T> extends Supplier<T> {
-    enum State { RUNNING, SUCCESS, FAILED, CANCELLED }
+    enum State { SUCCESS, FAILED, UNAVAILABLE }
 
     State state();
 
@@ -21,18 +21,17 @@ public class StructuredScopeShutdownOnFailure<E extends Exception> implements Au
   }
 
   public <T> TaskHandle<T> fork(Invokable<? extends T, ? extends E> invokable) {
-    var future = scope.fork(invokable::invoke);
+    var subtask = scope.fork(invokable::invoke);
     return new TaskHandle<T>() {
       @Override
       public State state() {
-        return switch (future.state()) {
-          case RUNNING -> State.RUNNING;
+        return switch (subtask.state()) {
+          case UNAVAILABLE -> State.UNAVAILABLE;
           case SUCCESS -> State.SUCCESS;
-          case CANCELLED -> State.CANCELLED;
           case FAILED -> {
-            var throwable = future.exceptionNow();
+            var throwable = subtask.exception();
             if (throwable instanceof InterruptedException) {
-              yield State.CANCELLED;
+              yield State.UNAVAILABLE;
             }
             yield State.FAILED;
           }
@@ -41,9 +40,9 @@ public class StructuredScopeShutdownOnFailure<E extends Exception> implements Au
 
       @Override
       public T get() {
-        return switch (future.state()) {
-          case RUNNING, CANCELLED, FAILED -> throw new IllegalStateException();
-          case SUCCESS -> future.resultNow();
+        return switch (subtask.state()) {
+          case UNAVAILABLE, FAILED -> throw new IllegalStateException();
+          case SUCCESS -> subtask.get();
         };
       }
     };
@@ -54,6 +53,7 @@ public class StructuredScopeShutdownOnFailure<E extends Exception> implements Au
   }
 
   public <X extends Exception> void joinAll(Function<? super E, ? extends X> exceptionMapper) throws X, InterruptedException {
+    Objects.requireNonNull(exceptionMapper, "exceptionMapper is null");
     scope.join();
     scope.throwIfFailed(throwable -> {
       if (throwable instanceof RuntimeException e) {
@@ -62,8 +62,8 @@ public class StructuredScopeShutdownOnFailure<E extends Exception> implements Au
       if (throwable instanceof Error e) {
         throw e;
       }
-      if (throwable instanceof InterruptedException) {
-        throw new CancelledException();
+      if (throwable instanceof InterruptedException e) {
+        return (X) e;  // dubious cast
       }
       return exceptionMapper.apply((E) throwable);
     });
