@@ -1,7 +1,7 @@
 package fr.umlv.loom.structured;
 
-import jdk.incubator.concurrent.StructuredTaskScope;
-
+import java.util.Objects;
+import java.util.concurrent.StructuredTaskScope;
 import java.util.function.Function;
 
 public class StructuredScopeShutdownOnSuccess<T, E extends Exception> implements AutoCloseable {
@@ -15,11 +15,12 @@ public class StructuredScopeShutdownOnSuccess<T, E extends Exception> implements
     scope.fork(invokable::invoke);
   }
 
-  public T joinAll() throws E, InterruptedException, CancelledException {
+  public T joinAll() throws E, InterruptedException {
     return joinAll(e -> e);
   }
 
-  public <X extends Exception> T joinAll(Function<? super E, ? extends X> exceptionMapper) throws X, InterruptedException, CancelledException {
+  public <X extends Exception> T joinAll(Function<? super E, ? extends X> exceptionMapper) throws X, InterruptedException {
+    Objects.requireNonNull(exceptionMapper, "exceptionMapper is null");
     scope.join();
     return scope.result(throwable -> {
       if (throwable instanceof RuntimeException e) {
@@ -28,8 +29,8 @@ public class StructuredScopeShutdownOnSuccess<T, E extends Exception> implements
       if (throwable instanceof Error e) {
         throw e;
       }
-      if (throwable instanceof InterruptedException) {
-        throw new CancelledException();
+      if (throwable instanceof InterruptedException e) {
+        return (X) e;  // dubious cast
       }
       return exceptionMapper.apply((E) throwable);
     });
